--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@
   margin: 10px;
   padding: 10px;
   float: left;
-  background-color: #ecf0f1;
-  border: 1px solid #ababab;
+  box-shadow: 0 1px 4px 0 #d4d5d9;
   border-radius: 3px;
 }
 
@@ -60,6 +59,13 @@
   border: 1px solid #27ae60;
   font-weight: 600;
   font-size: 14px;
+}
+
+.product-add_to_cart:hover{
+  background: #ffffff;
+  color: black;
+  border: 1px solid #ddd;
+  cursor: pointer;
 }
 
 .cart-item--list {
